--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -4,70 +4,73 @@
 </head>
 <body>
   <p>Rock Paper Scissors</p>
-  <button onclick="
-  const randomNum=Math.random();
-  let computerPick='';
-  if(randomNum>=0&&randomNum<1/3){
-    computerPick='rock';
-  }else if(randomNum>=1/3&&randomNum<2/3){
-    computerPick='paper';
-  }else{
-    computerPick='scissors';
-  }
-  let result='';
-  if(computerPick==='rock'){
-    result='Tie';
-  }else if(computerPick==='paper'){
-    result='Lose';
-  }else{
-    result='Win';
-  }
-  alert(`You picked rock. Computer picked ${computerPick}.${result}`);">
+  <button onclick="playgame('rock');">
   Rock
   </button>
-  <button onclick="
-    const randomNum=Math.random();
-  let computerPick='';
-  if(randomNum>=0&&randomNum<1/3){
-    computerPick='rock';
-  }else if(randomNum>=1/3&&randomNum<2/3){
-    computerPick='paper';
-  }else{
-    computerPick='scissors';
-  }
-  let result='';
-  if(computerPick==='rock'){
-    result='Win';
-  }else if(computerPick==='paper'){
-    result='Tie';
-  }else{
-    result='Lose';
-  }
-  alert(`You picked paper. Computer picked ${computerPick}.${result}`);">
+  <button onclick="playgame('paper');">
   Paper
   </button>
-  <button onclick="
-    const randomNum=Math.random();
-  let computerPick='';
-  if(randomNum>=0&&randomNum<1/3){
-    computerPick='rock';
-  }else if(randomNum>=1/3&&randomNum<2/3){
-    computerPick='paper';
-  }else{
-    computerPick='scissors';
-  }
-  let result='';
-  if(computerPick==='rock'){
-    result='Lose';
-  }else if(computerPick==='paper'){
-    result='Win';
-  }else{
-    result='Tie';
-  }
-  alert(`You picked scissors. Computer picked ${computerPick}.${result}`);">
+  <button onclick="playgame('scissors');">
   Scissors
   </button>
   <script>
+    const score={
+      win:0,
+      lose:0,
+      tie:0
+    };
+  function playgame(playermove){
+  const computerPick=randomPick();
+  let result='';
+  if(playermove==='rock'){
+  if(computerPick==='rock'){
+    result='Tie';
+  }else if(computerPick==='paper'){
+    result='You Lose';
+  }else{
+    result='You Win';
+  }
+  }else if(playermove==='paper'){
+  if(computerPick==='rock'){
+    result='You Win';
+  }else if(computerPick==='paper'){
+    result='Tie';
+  }else{
+    result='You Lose';
+  }
+  }else{
+    if(computerPick==='rock'){
+    result='You Lose';
+  }else if(computerPick==='paper'){
+    result='You Win';
+  }else{
+    result='Tie';
+  }
+  }
+  if(result==='You Win'){
+    score.win+=1;
+  }
+  else if(result==='You Lose'){
+    score.lose+=1;
+  }
+  else{
+    score.tie+=1;
+  }
+  alert(`You picked ${playermove}. Computer picked ${computerPick}.${result}
+Wins:${score.win},Losses:${score.lose},Ties:${score.tie}`);
+    }  
+    function randomPick(){
+    const randomNum=Math.random();
+    let computerPick='';
+    if(randomNum>=0&&randomNum<1/3){
+        computerPick='rock';
+    }else if(randomNum>=1/3&&randomNum<2/3){
+        computerPick='paper';
+    }else{
+        computerPick='scissors';
+    }
+    return computerPick;
+    }
   </script>
 </body>
 </html>
