Day 6 JavaScript Practice

--- a/rock-paper-scissors/rock-paper-scissors.html
+++ b/rock-paper-scissors/rock-paper-scissors.html
@@ -35,6 +35,11 @@
     document.querySelector('.js-result').innerHTML=('Take your pick');" class="reset-button">
       Reset Score
     </button>
+    <button onclick="autoPlay()" class="auto-button">
+      Auto Play
+    </button>
+    <div class="game-body-section">
+
     </div>
     </div>
   </div>
